--- a/TGE/templates/css/style.css
+++ b/TGE/templates/css/style.css
@@ -64,20 +64,28 @@ p{
 /* carousel*/
 #jogos{
     margin-top: 10vh;
-    width: 100vw;
+    width: 98vw;
+    
 }
 #carousel{
    width: 100%;
-
+  margin-left: 2vw;
 }
 .imagem{
 width: 100%;
 height: 100%;
+
 }
 .img{
-    width: 100%;
+    margin-right: 0.1vw;
+    width: 16%;
+    border: solid black 1px;
 }
 
+.img:hover{
+    transform: scale(1.2, 1.2);
+
+}
 /*template perfil*/
 #aba_perfil{
     color: white;
