--- a/TGE/csspaginas/seguranca.css
+++ b/TGE/csspaginas/seguranca.css
@@ -1,7 +1,7 @@
 #perfil_perfil{
     border: solid #424549 2px;
     border-radius: 1vh 1vh 1vh 1vh;
-    
+    color: white;
     padding: 0 3.76vw 0 1vh;
     
     margin: 0;
