--- a/TGE/Chat2.0-main/public/style.css
+++ b/TGE/Chat2.0-main/public/style.css
@@ -13,33 +13,58 @@ html, body {
     display: flex;
     justify-content: center;
     align-items: center;
+    overflow-x:hidden;
     flex-direction: column;
   }
-  
-  input {
+  input{
     width: 600px;
     border: 1px solid #ddd;
     height: 50px;
     padding: 0 20px;
     font-size: 14px;
   }
+  #inputtexto {
+    width: 90vw;
+    border: 2px solid rgb(0, 0, 0);
+    background-color: rgb(88, 87, 87);
+    height: 50px;
+    padding: 0 20px;
+    font-size: 14px;
+    color: rgb(255, 253, 253);
   
-  button {
-    width: 600px;
+  }
+  input::placeholder {
+    color: rgb(255, 253, 253);
+  }
+  
+ #botaoChat{
+    width: 50px;
     height: 50px;
     font-size: 14px;
-    background: #069;
-    text-align: center;
+    color: #FFF;
+   border-radius: 5px 5px 5px 5px;
     line-height: 50px;
     font-weight: bold;
-    color: #FFF;
+    color: #000;
     margin-top: 10px;
   }
-  
-  .menssage {
-    width: 600px;
-    height: 400px;
-    margin: 20px 0;
-    border: 1px solid #ddd;
-    padding: 20px;
+  .menssages{
+    color: rgb(230, 227, 227);
+    padding: 6px 0px 6px 25px;
   }
+  .menssages:hover{
+  
+    background-color: rgb(69, 70, 69);
+  }
+
+  .menssage {
+width: 100vw;
+    height: 100vh;
+    
+  }
+  #divChat{
+    position: fixed;
+    margin-top: 90vh;
+ 
+  }
+  
