--- a/TGE/templates/css/style.css
+++ b/TGE/templates/css/style.css
@@ -6,7 +6,7 @@
 /*nav*/
 #nav{    
     background-color: #26292E; 
-    padding:1.5vh 0 1.5vh 1.5vw;
+    padding:1vw 0 1vw 1vw;
     border-bottom: 1px solid black;
 }
 #perfil_link{
@@ -18,7 +18,7 @@
     
 }
 #nick{
-margin: 0.5vh 0 0 0.8vw;
+margin: 0.5vw 0 0 0.8vw;
 
 color: white;
 }
@@ -42,11 +42,12 @@ background-color: #36393E;
     margin-top:7vh;
     color: white;
     border-radius: 3rem;
-    font-size: 1.5rem;
+    font-size: 1.5vw;
+    
 }
 #registrar{
     background-color: #3CB51E;
-    font-size: 3.5vh;
+    font-size: 2vw;
     border: black solid 0.3vh;
     border-radius: 3rem;
     padding: 2vh 2vw 2vh 2vw;;
@@ -57,21 +58,25 @@ background-color: #36393E;
 #div_registro{
     text-align: center;
 }
-p{
+#TGE{
     text-align: center;
     color: white;
-    font-size: 3vh;
+    font-size: 2vw;
     margin-top: 2vh;
+    width: 90vw;
+    margin-left: 5vw;
 }
 /* carousel*/
 #jogos{
-    margin-top: 10vh;
-    width: 98vw;
-    
+    margin-top: 3.5vw;
+    width: 90vw;
+   
+margin-left: 5vw;
 }
 #carousel{
    width: 100%;
-  margin-left: calc(2vw - 2.5px);
+  
+
 }
 .imagem{
 width: 100%;
@@ -83,7 +88,6 @@ height: 100%;
     width: 16%;
     border: solid black 1px;
 }
-
 .img:hover{
     transform: scale(1.2, 1.2);
 
@@ -122,3 +126,183 @@ ul{
     color: white;
 }
 
+@media screen and (max-width: 1060px) and (min-width: 921px){
+    .img{
+        width: 25%;
+    }
+    
+    #carousel{
+        width: 69%;
+        margin-left: 21vw;
+     }
+    #jogos{
+        margin-top: 10vw;
+        width: 90vw;
+        position: absolute;
+    }
+    
+    #TGE{
+        width: 90vw;
+        margin-left: 5vw;
+    }
+  
+}
+@media screen and (max-width: 920px) and (min-width: 901px){
+    .img{
+        width: 25%;
+    }
+    
+    #carousel{
+        width: 89%;
+        margin-left: 14vw;
+     }
+    #jogos{
+        margin-top: 10vw;
+        width: 90vw;
+        position: absolute;
+    }
+    
+    #TGE{
+        width: 90vw;
+        margin-left: 5vw;
+    }
+  #welcome{
+    width: 50vw;
+    font-size: 17px;
+  }
+  #registrar{
+    font-size: 3vw;
+    margin-top: 4vh;
+    margin-left: auto;
+}
+#TGE{
+    font-size: 25px;
+}
+
+}
+
+@media screen and (max-width: 900px) and (min-width: 701px){
+
+.img{
+    width: 20%;
+}
+#carousel{
+    position: fixed;
+    margin-left: 4.5vw;
+    
+ }
+#jogos{
+    width: 90vw;
+  
+}
+#TGE{
+    width: 90vw;
+    margin-left: 5vw;
+}
+#welcome{
+    width: 50vw;
+}
+
+}
+@media screen and (max-width: 700px) and (min-width: 300px){
+    #jogos{
+        width: 90vw;
+        margin-left: 12vw;
+        
+     
+    }
+#logoimg{
+    width: 60px;
+    height: 45px;
+}
+#logo{
+    width: 100vw;
+}
+#icon{
+    width: 25px;
+    height: 30px;
+    
+}
+
+    .img{
+        width: 25%;
+    }
+    #TGE{
+        width: 90vw;
+        margin-left: 5vw;
+        font-size: 3.5vw;
+    }
+    #registrar{
+        font-size: 3vw;
+        margin-top: 4vh;
+        margin-left: auto;
+    }
+    
+    #welcome{
+        margin-top:7vh;
+        color: white;
+        border-radius: 3rem;
+        font-size: 3vw;  
+    }
+    #carousel{
+        margin-top: 8vw;
+        position: fixed;
+       width: 90vw;
+       margin-left: 2.5vw;
+     }
+    #perfil_link{
+        margin-top: 10px;
+    }
+}
+
+@media screen and (max-width: 299px) and (min-width: 200px){
+
+    #jogos{
+        width: 90vw;
+        margin-left: 12vw;
+        
+     
+    }
+#logoimg{
+    width: 60px;
+    height: 45px;
+}
+#logo{
+    width: 100vw;
+}
+#icon{
+    width: 25px;
+    height: 30px;
+    
+}
+
+    .img{
+        width: 25%;
+    }
+    #TGE{
+        width: 90vw;
+        margin-left: 5vw;
+        font-size: 3.5vw;
+    }
+    #registrar{
+        font-size: 3vw;
+        margin-top: 4vh;
+        margin-left: auto;
+    }
+    
+    #welcome{
+        margin-top:7vh;
+        color: white;
+        border-radius: 3rem;
+        font-size: 3vw;  
+    }
+    #carousel{
+        margin-top: 8vw;
+        position: fixed;
+       width: 90vw;
+       margin-left: 2.5vw;
+     }
+    #perfil_link{
+        margin-top: 10px;
+    }
+}
