--- a/TGE/templates/css/style.css
+++ b/TGE/templates/css/style.css
@@ -125,6 +125,22 @@ ul{
 .perfilLinks{
     color: white;
 }
+#perfil_opcoes{
+    z-index: 4;
+    margin-top: 5vh;
+  position: absolute;
+    width: 194px;
+    background-color: #3CB51E;
+    
+    color: white;
+    text-align: center;
+    padding-bottom: 10px;
+}
+#logout:hover{
+    background-color: aqua;
+    
+        
+}
 
 @media screen and (max-width: 1060px) and (min-width: 921px){
     .img{
@@ -139,11 +155,18 @@ ul{
         margin-top: 10vw;
         width: 90vw;
         position: absolute;
+        padding-bottom: 2vw;
     }
     
     #TGE{
         width: 90vw;
         margin-left: 5vw;
+    }
+    #perfil_opcoes{
+       
+      
+        width: 185px;
+        
     }
   
 }
@@ -178,11 +201,16 @@ ul{
 #TGE{
     font-size: 25px;
 }
-
+#perfil_opcoes{
+       
+      
+    width: 186px;
+    
+}
 }
 
 @media screen and (max-width: 900px) and (min-width: 701px){
-
+   
 .img{
     width: 20%;
 }
@@ -201,6 +229,12 @@ ul{
 }
 #welcome{
     width: 50vw;
+}
+#perfil_opcoes{
+       
+      
+    width: 185px;
+    
 }
 
 }
@@ -223,7 +257,9 @@ ul{
     height: 30px;
     
 }
-
+#nick{
+    font-size: 20px;
+}
     .img{
         width: 25%;
     }
@@ -252,11 +288,24 @@ ul{
      }
     #perfil_link{
         margin-top: 10px;
+        margin-right: 15px;
+    }
+    #perfil_opcoes{
+       
+        margin-top: 3.8vh;
+        width: 150px;
+        
     }
 }
 
-@media screen and (max-width: 299px) and (min-width: 200px){
 
+@media screen and (max-width: 299px) and (min-width: 200px){
+    #perfil_opcoes{
+       margin-top: 3.8vh;
+      font-size: 15px;
+        width: 120px;
+        
+    }
     #jogos{
         width: 90vw;
         margin-left: 12vw;
@@ -265,7 +314,7 @@ ul{
     }
 #logoimg{
     width: 60px;
-    height: 45px;
+    height: 40px;
 }
 #logo{
     width: 100vw;
@@ -275,6 +324,10 @@ ul{
     height: 30px;
     
 }
+#nick{
+    margin-top: 8px;
+    font-size: 15px;
+}
 
     .img{
         width: 25%;
@@ -303,6 +356,7 @@ ul{
        margin-left: 2.5vw;
      }
     #perfil_link{
-        margin-top: 10px;
+        margin-top: 8px;
+        margin-right: 10px;
     }
 }
