--- a/TGE/csspaginas/chat.css
+++ b/TGE/csspaginas/chat.css
@@ -1,12 +1,19 @@
+
+
 #chatsMenu{
-    background-color: #2D2D2D;
-    text-align: center;
-    padding: 4vh 3vw 54.6vh 2vw;
     width: 14vw;
     color: white;
-    border-right: black solid 2px;
+    
+    
+    margin-left: 2vw;
+}
+#chatBG{
+    text-align: center;
+    background-color: #2D2D2D;
     display:inline-block;
-
+    width:19vw;
+    height: 88.7vh;
+    border-right: black solid 2px;
 }
 .chatJogo{
     width: 12vw;
@@ -16,21 +23,24 @@
 }
 #chatsMenu h1{
 margin-bottom: 1.8vh;
+margin-top: 1.8vh;
 }
 .bgChat{
     background-color: #3B3E42;
     border: solid black 2px;
     padding-top: 1vh;
-    
 }
 .lobby{
     background-color: #3B3E42;
     border: solid black 1px;
     width: 7vw;
     margin-left: 3vw;
-
+    font-size: 1vw;
 }
-
+.lobby span{
+   padding-left: 4px;
+   padding-right: 4px ;
+}
 .hoversChat{
     margin-bottom: 1vh;
 }
@@ -38,37 +48,83 @@ margin-bottom: 1.8vh;
     background-color: #2e2f31;
     color: rgb(255, 255, 255);
     border-top: black solid 1px;
-    border-bottom: black solid 1px;
-
-    
+    border-bottom: black solid 1px; 
 }
 .hoversChat:hover .lobby{
     border-top: none;
     border-bottom: none;
 }
 #caixaTexto{
-  float: right;
-  margin-left: 2vw;
+    float: right;
+    margin-left: 2vw;
     margin-right: 2vw;
 }
 
-#usuariosLogados{
+#usuariosLogadosBG{
     background-color: #2D2D2D;
     float: right;
-    text-align: center;
-    padding: 4vh 3vw 81.9vh 2vw;
-    width: 14vw;
-    color: white;
+    width:20.2vw;
+    height: 88.7vh;
     border-left: black solid 2px;
 }
-
+#users{
+  
+    float: right;
+    text-align: center;
+    width: 19vw;
+}
+.userLogado{
+    margin-top: 7vw;
+}
 #iframes{
     position: absolute;
-    width: 61.8vw;
-    height: 88.9vh;
+    width: 60.4vw;
+    height: 88.7vh;
     border: none;
-    overflow-x:hidden;
 }
 #nomess{
     display: none;
+}
+
+
+
+@media screen and (max-width: 980px) and (min-width: 600px){
+    .lobby{
+        font-size:0.9vw;
+    }
+    #iframes{
+        width: 100vw;
+     
+    }
+    #chatsMenu{
+        display: none;
+    }
+    #chatBG{
+        display: none;
+    }
+    #usuariosLogadosBG{
+    display: none;
+    }
+    .lobby{
+        font-size: 18px;
+    }
+}
+@media screen and (max-width: 750px) and (min-width: 200px){
+#iframes{
+    width: 100vw;
+    height: 90vh;
+
+}
+#chatsMenu{
+    display: none;
+}
+#chatBG{
+    display: none;
+}
+#usuariosLogadosBG{
+display: none;
+}
+.lobby{
+    font-size: 18px;
+}
 }
