--- a/TGE/templates/css/style.css
+++ b/TGE/templates/css/style.css
@@ -2,23 +2,26 @@
     margin: 0;
     text-decoration: none;
     list-style-type: none;
+   
 }
 /*nav*/
 #nav{    
+  
     background-color: #26292E; 
-    padding:1vw 0 1vw 1vw;
+    padding:0.6vh 0 0.9vh 0;
     border-bottom: 1px solid black;
 }
+
 #perfil_link{
     float: right;
-    margin: 1rem 3rem 0 0;
+    margin: 1vh 3vw 0 0;
     color: white;
     display: flex;
     font-size: 1.5rem;
     
 }
 #nick{
-margin: 0.5vw 0 0 0.8vw;
+margin: 0.5vh 0 0 0.8vh;
 
 color: white;
 }
@@ -39,7 +42,7 @@ background-color: #36393E;
     width: max-content;
     margin-left:auto ;
     margin-right: auto;
-    margin-top:7vh;
+    margin-top:4vh;
     color: white;
     border-radius: 3rem;
     font-size: 1.5vw;
@@ -51,7 +54,6 @@ background-color: #36393E;
     border: black solid 0.3vh;
     border-radius: 3rem;
     padding: 2vh 2vw 2vh 2vw;;
-   
     margin-top: 4vh;
     margin-left: auto;
 }
@@ -109,10 +111,14 @@ height: 100%;
     padding: 0 4vw 0 1vh;
 
 }
+#logoimg{
+    margin-left: 1vw;
+    width: 80px;
+    height: 58px;
+}
 #opcoesperfil{
     margin-bottom: 3vh;
-    padding-left: 1vh;
-    
+    padding-left: 1vw;
     margin-left: 3px;
 }
 ul{
@@ -127,19 +133,33 @@ ul{
 }
 #perfil_opcoes{
     z-index: 4;
-    margin-top: 5vh;
-  position: absolute;
+    margin-top: 40px;
+    position: absolute;
     width: 194px;
-    background-color: #3CB51E;
-    
+    background-color:#26292E;
     color: white;
     text-align: center;
     padding-bottom: 10px;
+    border-left: solid black 1px;
+    border-right: solid black 1px;
+    border-bottom: solid black 1px;
+    border-bottom-left-radius:15% ;
+    border-bottom-right-radius:15% ;
 }
-#logout:hover{
-    background-color: aqua;
-    
-        
+.perfOP:hover{
+   border-color: red;      
+}
+.perfOP{
+    padding-top: 5px;
+    border-bottom: 2px solid black ;
+    border-radius: 30%;
+}
+.perfOP a:hover{
+    color: red;
+}
+.perfOP a{
+
+    color: white;
 }
 
 @media screen and (max-width: 1060px) and (min-width: 921px){
@@ -163,11 +183,9 @@ ul{
         margin-left: 5vw;
     }
     #perfil_opcoes{
-       
-      
         width: 185px;
-        
     }
+    
   
 }
 @media screen and (max-width: 920px) and (min-width: 901px){
@@ -197,12 +215,12 @@ ul{
     font-size: 3vw;
     margin-top: 4vh;
     margin-left: auto;
-}
+  }
 #TGE{
     font-size: 25px;
 }
 #perfil_opcoes{
-       
+   
       
     width: 186px;
     
@@ -231,14 +249,76 @@ ul{
     width: 50vw;
 }
 #perfil_opcoes{
-       
-      
-    width: 185px;
-    
+    font-size: 23px;
+        width: 185px;
+}
+#logoimg{
+    width: 65px;
+    height: 50px;
 }
 
 }
-@media screen and (max-width: 700px) and (min-width: 300px){
+@media screen and (max-width: 700px) and (min-width: 401px){
+    #jogos{
+        width: 90vw;
+        margin-left: 12vw;
+        
+     
+    }
+#logoimg{
+    width: 60px;
+    height: 45px;
+}
+#logo{
+    width: 100vw;
+}
+#icon{
+   
+    width: 25px;
+    height: 30px;
+    
+}
+#nick{
+    font-size: 20px;
+}
+    .img{
+        width: 25%;
+    }
+    #TGE{
+        width: 90vw;
+        margin-left: 5vw;
+        font-size: 3.5vw;
+    }
+    #registrar{
+        font-size: 3vw;
+        margin-top: 4vh;
+        margin-left: auto;
+    }
+    
+    #welcome{
+        margin-top:7vh;
+        color: white;
+        border-radius: 3rem;
+        font-size: 3vw;  
+    }
+    #carousel{
+        margin-top: 8vw;
+        position: fixed;
+       width: 90vw;
+       margin-left: 2.5vw;
+     }
+    #perfil_link{
+        margin-top: 10px;
+        
+    }
+    #perfil_opcoes{
+        font-size: 20px;
+      
+        width: 150px;
+        
+    }
+}
+@media screen and (max-width: 400px) and (min-width: 300px){
     #jogos{
         width: 90vw;
         margin-left: 12vw;
@@ -288,22 +368,23 @@ ul{
      }
     #perfil_link{
         margin-top: 10px;
-        margin-right: 15px;
+       
+    }
+    #nav{
+        padding: 0;
     }
     #perfil_opcoes{
-       
-        margin-top: 3.8vh;
+      
+        font-size: 18px;
         width: 150px;
         
     }
-}
-
-
+    }
 @media screen and (max-width: 299px) and (min-width: 200px){
     #perfil_opcoes{
-       margin-top: 3.8vh;
-      font-size: 15px;
-        width: 120px;
+     
+    font-size: 15px;
+    width: 120px;
         
     }
     #jogos{
